# apuntes

./: .editorconfig  .env.example  .gitignore  .markdownlint.json  AGENTS.md  CONVERSION_II_PACKAGE.md  Makefile  README.md  README_scripts.md  build_output.txt  jupytext.toml  requirements.txt  setup.py  test_packages.py  twitter.py
.github/: copilot-instructions.md
.opencode/: package-lock.json
contenidos/: ._config.yml.bak  _config.yml  _toc.yml  bibliografia.md  introduccion.md  myst.yml  (+2 more)
contenidos/_static/code/: README.md  pyproject.toml
contenidos/_static/code/archivos/: edd.txt  texto.txt
contenidos/_static/code/excepciones/: excepciones.py
contenidos/_static/code/figuras/: circulo.py  cuadrado.py  elipse.py  main.py  punto.py  rectangulo.py  triangulo.py
contenidos/_static/code/grafos/: caminos_minimos.py  dijkstra.py
contenidos/_static/code/ii/: README.md  __init__.py  busquedas.py  ii.py
contenidos/_static/code/ii/corpus/: doc1.txt  doc2.txt  doc3.txt  doc4.txt
contenidos/_static/code/ii/temp_blocks/: bloque_0.txt  bloque_1.txt  bloque_2.txt  bloque_3.txt
contenidos/_static/code/persistencia/: agenda.py
contenidos/_static/code/scraping/: README.md  analyze_data.py  books_summary.txt  requirements.txt  run_spider.py  scrapy.cfg
contenidos/_static/code/scraping/books_scraper/: books_export.json  horror_books.csv  items.py  middlewares.py  pipelines.py  settings.py
contenidos/_static/code/scraping/books_scraper/spiders/: books.py
contenidos/_static/code/stack/: stack.py  stack_exception.py
contenidos/_static/code/xml/: poema.xml
(+102 files in other folders)
