[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edd-code"
version = "0.1"
description = "Código de estructuras de datos para apuntes UNTREF-EDD"
authors = [{ name = "UNTreF EDD" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/untref-edd/apuntes"

[tool.setuptools.packages]
find = { include = ["grafos", "ii"] }
